--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+    
 <body>
     <h1>Coming Soon</h1>
+    <p> I just wanna write stuff. Lina is my mascot. </p>
+<p>This is my website and Lina and I are awesome.</p>
 </body>
 </html>
