--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     
 <body>
     <h1>Coming Soon</h1>
-    <p> I just wanna write stuff. Lina is my mascot. </p>
+    <p>The "Bad Joke Friday" has been an important tradition among the Stortz family and its companions for quite some time. <br>
+        Here at JellyIndustries, we care greatly about your ways of celebrating good times among family and friends. <br>
+        We will always be here to support you. As yet another act of kindness, JellyIndustries will be hard at work all <br>
+        summer. Our very beatiful and very diligent CEO will be 100% devoted to this project. Her great sacrifice will <br> 
+        result in the happiness and well being of many others to come. Futue generations will know JellyIndustries as <br>
+        the amazing company it is today. 
+    </p>
 <p>This is my website and Lina and I are awesome.</p>
 </body>
 </html>
