--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         result in the happiness and well being of many others to come. Futue generations will know JellyIndustries as <br>
         the amazing company it is today. 
     </p>
-<p>This is my website and Lina and I are so awesome.</p>
+<p>Updated last Teusday, April 10 @ 3:45</p>
 </body>
 </html>
