Starting Vue setup

--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Bad Joke Friday</title>
-</head>
-    
-<body>
-    <h1>Doody Coming Soon</h1>
-    <p>The "Bad Joke Friday" has been an important tradition among the Stortz family and its companions for quite some time. <br>
-        Here at JellyIndustries, we care greatly about your ways of celebrating good times among family and friends. <br>
-        We will always be here to support you. As yet another act of kindness, JellyIndustries will be hard at work all <br>
-        summer. Our very beatiful and very diligent CEO will be 100% devoted to this project. Her great sacrifice will <br> 
-        result in the happiness and well being of many others to come. Futue generations will know JellyIndustries as <br>
-        the amazing company it is today. 
-    </p>
-<p>This is my website and Lina and I are so awesome.</p>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
