gitflow-feature-stash: links
I installed two links - Home Page and About Us because they had been deleted. :)

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         the amazing company it is today. 
     </p>
 <p>Updated last Teusday, April 10 @ 3:45</p>
+<a href="aboutus.html">About Us</a>
 </body>
 </html>
